# spats

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  conanfile.txt  requirements.txt  spatula-config.cmake.in
cmake/: FindSphinx.cmake
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  Gemfile  _config.yml  about.md  directions.md  index.md  template.md  vectors.md
docs/directions/: direction_as.md  enum_size.md  index.md  named_directions.md  ranged_enum.md
docs/directions/enum_to_vector/: index.md  operator().md  operator_parens.md
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/source/: CMakeLists.txt  conf.py  geometry.rst  index.rst  kdtree.rst
docs/source/_static/css/: style.css
docs/source/kdtree/: constructor.rst  nearest_to.rst  nearest_within.rst
docs/vectors/: field.md  field_constructible.md  get_component.md  has_component.md  has_field_closure.md  has_vector_closure.md  index.md  is_numeric.md  scalar_field.md  semivector.md  vector.md
docs/vectors/components/: get_w.md  get_x.md  get_y.md  get_z.md  has_1d_component.md  has_2d_component.md  has_3d_component.md  has_4d_component.md  has_i_component.md  has_nd_component.md  has_static_size.md  index.md
examples/: CMakeLists.txt  README.md  add_example.cpp
examples/directions/: print-directions.cpp  random-directions.cpp
examples/docs/: CMakeLists.txt  constructor_example.cpp  nearest_to_example.cpp  nearest_within_example.cpp
examples/strings/: CMakeLists.txt  foobar.cpp
include/: kdtree.hpp  spatula.hpp
include/spatula/: directions.hpp  geometry.hpp  kdtree.hpp  math.hpp  spatula.hpp  vectors.hpp
include/spatula/geometry/: directions.hpp  norms.hpp  spatial.hpp  vectors.hpp
include/spatula_extensions/: eigen.hpp  glm.hpp  sdl.hpp  sfml.hpp
test/: CMakeLists.txt  README.md  test_L2sq.cpp  test_constructor.cpp  test_nearest_to.cpp  test_nearest_within.cpp
test/geometry/: test_vector2.hpp
test/include/: util.hpp
test/src/: test_L1.cpp  test_L2.cpp  test_L2sq.cpp  test_constructor.cpp  test_nearest_to.cpp  test_nearest_within.cpp
test/vectors/: test_field.cpp  test_field_constructible.cpp  test_get_component.cpp  test_has_component.cpp  test_has_field_closure.cpp  test_has_vector_closure.cpp  test_is_numeric.cpp  test_scalar_field.cpp  test_semivector.cpp  test_vector.cpp
test/vectors/util/: eigen_case.cpp  get_component_suites.py  glm_case.cpp  randvec.py  sfml_case.cpp
